--- a/Hospital/Hospital-empresarial/.settings/org.eclipse.wst.common.component
+++ b/Hospital/Hospital-empresarial/.settings/org.eclipse.wst.common.component
@@ -1,37 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Hospital-empresarial-0.0.1-SNAPSHOT">
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
-        <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
-        <dependent-module archiveName="Hospital-negocio.jar" deploy-path="/" handle="module:/resource/Hospital-negocio/Hospital-negocio">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="jboss-ejb-api_3.2_spec.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/jboss/spec/javax/ejb/jboss-ejb-api_3.2_spec/1.0.0.Final/jboss-ejb-api_3.2_spec-1.0.0.Final.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="cdi-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/enterprise/cdi-api/1.2/cdi-api-1.2.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="javax.el-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/el/javax.el-api/3.0.0/javax.el-api-3.0.0.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="javax.interceptor-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/interceptor/javax.interceptor-api/1.2/javax.interceptor-api-1.2.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="javax.inject.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/inject/javax.inject/1/javax.inject-1.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="javax.annotation-api.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/javax/annotation/javax.annotation-api/1.3/javax.annotation-api-1.3.jar">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-<<<<<<< HEAD
-        <dependent-module archiveName="Hospital-percistencia.jar" deploy-path="/lib" handle="module:/resource/Hospital-percistencia/Hospital-percistencia">
-=======
-        <dependent-module archiveName="Hospital-percistencia.jar" deploy-path="/lib" handle="module:/resource/Hospital-persistencia/Hospital-persistencia">
->>>>>>> branch 'master' of https://github.com/LuisBolivar77/HospitalProyectoFinal.git
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="Hospital-web.war" deploy-path="/" handle="module:/resource/Hospital-web/Hospital-web">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-    </wb-module>
-</project-modules>
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId"/>
