--- a/Hospital/Hospital-web/src/main/webapp/css/responsee.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/responsee.css
@@ -66,7 +66,10 @@ td {border-right:1px solid #e0e0e0;}
   padding:0 0.625em;
 }
 .size-960.align-content-left .line,.size-1140.align-content-left .line {margin-left:0;}
-form {line-height:1.4em;}
+form {
+	line-height:2.4em;
+	}	
+
 nav {
   display:block;
   width:100%;
@@ -218,7 +221,7 @@ ul.chevron .submenu > a:after, ul.chevron .sub-submenu > a:after,ul.chevron .asi
   list-style:none outside none;
   padding:10px;
 }
-.margin {margin:0 -3.625em;
+.margin {margin:0 3.375em;
 margin-left: 132px;
 }
 .line {clear:left;}
