--- a/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
@@ -44,56 +44,16 @@
 						<a href="../design/">DESIGN <br /> <strong>THEME</strong></a>
 					</div>
 					<p class="nav-text">Custom menu text</p>
-					<div class="top-nav s-12 l-5">
-						<ul class="right top-ul chevron">
-							<li><a>Gestion de Personal</a>
-								<ul>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/RegistroDePersonal.xhtml">Registro</a></li>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesPersonal.xhtml">Mas
-											opciones</a></li>
 
-								</ul></li>
-							<li><a>Gestion de Instalaciones</a>
-								<ul>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/RegistroDesInstalaciones.xhtml"></a></li>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesIntalaciones.xhtml">Mas
-											opciones</a></li>
-
-								</ul></li>
-						</ul>
-					</div>
 					<ul class="s-12 l-2">
 						<img src="#{request.contextPath}/img/LogoHospital.png" alt="" />
 
 					</ul>
 					<div class="top-nav s-12 l-5">
 						<ul class="top-ul chevron">
-							<li><a>Gestion de Insumos</a>
-								<ul>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/RegistroDeInsumos.xhtml">Registro</a></li>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesInsumos.xhtml">Mas
-											Opciones</a></li>
-
-								</ul></li>
-							<li><a>Gestion de Enfermedades</a>
-								<ul>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/RegistroDeEnfermedades.xhtml">Registro</a></li>
-									<li><a
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesEnfermedades.xhtml">Mas
-											Opciones</a></li>
-
-								</ul></li>
 							<h:form>
-								<li><h:commandLink
-										action="#{ControladorLogIn.cerrarSesion}"
-										value="Cerrar Sesion" /></li>
+								<li><h:commandLink action="#{ControladorLogIn.incioSesion}"
+										value="Iniciar Sesion" /></li>
 							</h:form>
 						</ul>
 					</div>
@@ -121,7 +81,24 @@
 		<div id="first-block">
 			<div class="line">
 				<div class="margin">
-					<div class="s-12 m-6 l-3 margin-bottom"></div>
+					<div class="s-12 m-6 l-3 margin-bottom">
+						<i class="icon-paperplane_ico icon2x"></i>
+						<h3>Acerca de Nosotros</h3>
+						<p>Somos el unico hospital que se preocupa por tu salud, con
+							nosotros siempre recibiras la mejor atencion posible.</p>
+					</div>
+					<div class="s-12 m-6 l-3 margin-bottom">
+						<i class="icon-star icon2x"></i>
+						<h3>Servicios</h3>
+						<p>Se atendido por los mejores profesionales en cada una de
+							nuestras areas que necesites.</p>
+					</div>
+					<div class="s-12 m-6 l-3 margin-bottom">
+						<i class="icon-message icon2x"></i>
+						<h3>Contacto</h3>
+						<p>Comunicate con nuestras lineas telefonicas o encuentranos
+							en la calle 14 junto al parque sucre</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -133,8 +110,8 @@
 						<p:messages id="facesMessage" autoUpdate="true" globalOnly="true"
 							closable="true">
 						</p:messages>
-						<ui:insert name="SolicutudPac"/>
-						<ui:insert name="cuerpo"/>
+
+						<ui:insert name="cuerpo"></ui:insert>
 					</div>
 				</div>
 			</div>
@@ -142,12 +119,48 @@
 		<!-- GALLERY -->
 		<div id="third-block">
 			<div class="line">
-				<div class="margin"></div>
+				<h2>Nuestras Instalaciones</h2>
+				<div class="margin">
+					<div class="s-12 m-6 l-3">
+						<img src="#{request.contextPath}/img/first-small.jpeg"
+							alt="alternative text" />
+
+					</div>
+					<div class="s-12 m-6 l-3">
+						<img src="#{request.contextPath}/img/second-small.jpeg"
+							alt="alternative text" />
+
+					</div>
+					<div class="s-12 m-6 l-3">
+						<img src="#{request.contextPath}/img/third-small.jpeg"
+							alt="alternative text" />
+
+					</div>
+					<div class="s-12 m-6 l-3">
+						<img src="#{request.contextPath}/img/fourth-small.jpeg"
+							alt="alternative text" />
+
+					</div>
+				</div>
 			</div>
 		</div>
 		<div id="fourth-block">
 			<div class="line">
-				<div id="owl-demo2" class="owl-carousel owl-theme"></div>
+				<div id="owl-demo2" class="owl-carousel owl-theme">
+					<div class="item">
+						<h2>Nuestra Mision</h2>
+						<p class="s-12 m-12 l-8 center">trabajamos con estandares de
+							acreditacion y eficiencia para brindar atencion integral con
+							calidad y calidez humana garantizando la seguridad del paciente y
+							su familia.</p>
+					</div>
+					<div class="item">
+						<h2>Nuestra Mision</h2>
+						<p class="s-12 m-12 l-8 center">En el año 2030 el Hospital el
+							EDEN sera un hospital universitario lider, con excelencia de
+							prestacion de servicios de salud acreditados..</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
