--- a/Hospital/Hospital-web/src/main/webapp/css/components.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/components.css
@@ -128,6 +128,16 @@ i, .icon {
   color: #eee;
   text-shadow: 0 0 3px rgba(255, 255, 255, 0.25);
 }
+.style-1 input[type="text"] {
+  padding: 10px;
+  border: solid 1px #dcdcdc;
+  transition: box-shadow 0.3s, border 0.3s;
+}
+.style-1 input[type="text"]:focus,
+.style-1 input[type="text"].focus {
+  border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
+}
 .icon-cloud:before { content: "\2601"; }
 .icon-at:before { content: "\0040"; }
 .icon-plus:before { content: "\002B"; }
