--- a/Hospital/Hospital-web/src/main/webapp/css/responsee.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/responsee.css
@@ -43,23 +43,23 @@ img {
 	width:100%;
 	}  
 table {
-	background:none repeat scroll 0 0 #fff;
-	border:1px solid #D0D0D0;
+	background:none repeat scroll 0 0 #ffffff;
+	border:1px solid #3700f5;
 	border-collapse:collapse;
 	border-spacing:0;
 	text-align:left;
 	width:100%;
 	}
 table tr td, table tr th {padding:0.625em;}
-table tfoot, table thead {background:none repeat scroll 0 0 #e0e0e0;}
-table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #e0e0e0;}
-th {border-right:1px solid #fff;}
-td {border-right:1px solid #e0e0e0;}
+table tfoot, table thead {background:none repeat scroll 0 0 #fbfbfb;}
+table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #5a19e4;}
+th {border-right:1px solid #ffffff;}
 .size-960 .line {
   margin:0 auto;
   max-width:60em;
   padding:0 0.625em;
 }
+
 .size-1140 .line {
   margin:0 auto;
   max-width:71.25em;
