--- a/Hospital/Hospital-web/src/main/webapp/css/components.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/components.css
@@ -138,6 +138,20 @@ i, .icon {
   border: solid 1px #707070;
   box-shadow: 0 0 5px 1px #969696;
 }
+
+button {
+ border: none;
+ background: #3a7999;
+ color: #f2f2f2;
+ padding: 10px;
+ font-size: 18px;
+ border-radius: 5px;
+ position: relative;
+ box-sizing: border-box;
+ transition: all 500ms ease;
+}
+
+
 .icon-cloud:before { content: "\2601"; }
 .icon-at:before { content: "\0040"; }
 .icon-plus:before { content: "\002B"; }
