--- a/Hospital/Hospital-web/src/main/webapp/css/responsee.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/responsee.css
@@ -52,7 +52,7 @@ table {
 	}
 table tr td, table tr th {padding:0.625em;}
 table tfoot, table thead {background:none repeat scroll 0 0 #fbfbfb;}
-table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #1b373e;}
+table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #0083c4;}
 th {border-right:1px solid #ffffff;}
 .size-960 .line {
   margin:0 auto;
