--- a/Hospital/Hospital-web/src/main/webapp/css/template-style.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/template-style.css
@@ -76,7 +76,7 @@ nav ul li ul li {
 	background: rgb(0, 30, 34);
 }
 footer {
-	background: none repeat scroll 0 0 #2fcbe0;
+	background: none repeat scroll 0 0 #0083c4;
 	padding: 1.5em 0;
 }
 footer p, footer a:link, footer a:visited, footer a:hover {
