--- a/Hospital/Hospital-web/src/main/webapp/template/index.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/index.xhtml
@@ -43,20 +43,20 @@
 					<div class="logo hide-l">
 						<a href="../design/">DESIGN <br /> <strong>THEME</strong></a>
 					</div>
-					<p class="nav-text">Custom menu text</p>
+					<p class="nav-text">Menu</p>
 					<div class="top-nav s-12 l-5">
 						<ul class="right top-ul chevron">
-							<li><a>Gestion de Personal</a>
+							<li><a style="color: black">Gestion de Personal</a>
 								<ul>
-									<li><a href="#{request.contextPath}/paginas/seguro/RegistroDePersonal.xhtml">Registro</a></li>
-									<li><a href="#{request.contextPath}/paginas/seguro/MasOpcionesPersonal.xhtml">Mas opciones</a></li>
+									<li><a style="color: black" href="#{request.contextPath}/paginas/seguro/RegistroDePersonal.xhtml">Registro</a></li>
+									<li><a style="color: black" href="#{request.contextPath}/paginas/seguro/MasOpcionesPersonal.xhtml">Mas opciones</a></li>
 
 								</ul></li>
-							<li><a>Gestion de Instalaciones</a>
+							<li><a style="color: black">Gestion de Instalaciones</a>
 								<ul>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/RegistroDesInstalaciones.xhtml"></a></li>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/MasOpcionesIntalaciones.xhtml">Mas
 											opciones</a></li>
 
@@ -69,26 +69,26 @@
 					</ul>
 					<div class="top-nav s-12 l-5">
 						<ul class="top-ul chevron">
-							<li><a>Gestion de Insumos</a>
+							<li><a style="color: black">Gestion de Insumos</a>
 								<ul>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/RegistroDeInsumos.xhtml">Registro</a></li>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/MasOpcionesInsumos.xhtml">Mas
 											Opciones</a></li>
 
 								</ul></li>
-							<li><a>Gestion de Enfermedades</a>
+							<li><a style="color: black" >Gestion de Enfermedades</a>
 								<ul>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/RegistroDeEnfermedades.xhtml">Registro</a></li>
-									<li><a
+									<li><a style="color: black" 
 										href="#{request.contextPath}/paginas/seguro/MasOpcionesEnfermedades.xhtml">Mas
 											Opciones</a></li>
 
 								</ul></li>
 							<h:form>
-								<li><h:commandLink
+								<li><h:commandLink style="color: black" 
 										action="#{ControladorLogIn.cerrarSesion}"
 										value="Cerrar Sesion" /></li>
 							</h:form>
