--- a/Hospital/Hospital-web/src/main/webapp/template/indexLogIn.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/indexLogIn.xhtml
@@ -39,16 +39,12 @@
 	<header>
 		<nav>
 			<div class="line">
-				<div class="top-nav">
-					<div class="logo hide-l">
-						<a href="../design/">DESIGN <br /> <strong>THEME</strong></a>
-					</div>
-					<p class="nav-text">Custom menu text</p>					
 					<ul class="s-12 l-2">
-						<img src="#{request.contextPath}/img/LogoHospital.png" alt="" />
+						<img src="#{request.contextPath}/img/LogoHospital.png" alt=""/>
 					</ul>
-					
-				</div>
+					<h2 class="texto">Hospital el eden</h2>
+					<br></br>
+					<h2 class="texto2">Nuestra prioridad es su salud</h2>
 			</div>
 		</nav>
 	</header>
