--- a/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
@@ -39,25 +39,13 @@
 	<header>
 		<nav>
 			<div class="line">
-				<div class="top-nav">
-					<div class="logo hide-l">
-						<a href="../design/">DESIGN <br /> <strong>THEME</strong></a>
-					</div>
-					<p class="nav-text">Custom menu text</p>
-
 					<ul class="s-12 l-2">
-						<img src="#{request.contextPath}/img/LogoHospital.png" alt="" />
-
+						<img src="#{request.contextPath}/img/LogoHospital.png" alt=""/>
 					</ul>
-					<div class="top-nav s-12 l-5">
-						<ul class="top-ul chevron">
-							<h:form>
-								<li><h:commandLink action="#{ControladorLogIn.incioSesion}"
-										value="Iniciar Sesion" /></li>
-							</h:form>
-						</ul>
-					</div>
-				</div>
+					<h2 class="texto">Hospital el eden</h2>
+					<br></br>
+					<h2 class="texto2">Nuestra prioridad es su salud</h2>
+					<BUTTON class="logIn">LOGIN</BUTTON>
 			</div>
 		</nav>
 	</header>
@@ -67,13 +55,7 @@
 			<div id="owl-demo" class="owl-carousel owl-theme">
 				<div class="item">
 					<img src="#{request.contextPath}/img/firstes.jpeg" alt="" />
-					<div class="carousel-text">
-						<div class="line">
-							<div class="s-12 l-9">
-								<h2>El mejor Hospital del Pais</h2>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 			</div>
 		</div>
