--- a/Hospital/Hospital-web/src/main/webapp/css/components.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/components.css
@@ -141,8 +141,8 @@ i, .icon {
 
 button {
  border: none;
- background: #3a7999;
- color: #f2f2f2;
+ background: #c6deff;
+ color: black;
  padding: 10px;
  font-size: 18px;
  border-radius: 5px;
