--- a/Hospital/Hospital-web/src/main/webapp/css/responsee.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/responsee.css
@@ -17,7 +17,7 @@ body {
   color:#444;
   }
 h1, h2, h3, h4, h5, h6 {
-  color:#444;
+  color: white;
   font-weight: normal;
   margin:0.2em 0 0.2em 0;    
 }
@@ -52,7 +52,7 @@ table {
 	}
 table tr td, table tr th {padding:0.625em;}
 table tfoot, table thead {background:none repeat scroll 0 0 #fbfbfb;}
-table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #0083c4;}
+table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #c6deff;}
 th {border-right:1px solid #ffffff;}
 .size-960 .line {
   margin:0 auto;
