--- a/Hospital/Hospital-web/src/main/webapp/template/inicioPersonal.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/inicioPersonal.xhtml
@@ -39,62 +39,14 @@
 	<header>
 		<nav>
 			<div class="line">
-				<div class="top-nav">
-					<div class="logo hide-l">
-						<a href="../design/">DESIGN <br /> <strong>THEME</strong></a>
-					</div>
-					<p class="nav-text">Menu</p>
-					<div class="top-nav s-12 l-5">
-						<ul class="right top-ul chevron">
-							<li><a style="color: black">Gestion de Personal</a>
-								<ul>
-									<li><a style="color: black" href="#{request.contextPath}/paginas/seguro/RegistroDePersonal.xhtml">Registro</a></li>
-									<li><a style="color: black" href="#{request.contextPath}/paginas/seguro/MasOpcionesPersonal.xhtml">Mas opciones</a></li>
-
-								</ul></li>
-							<li><a style="color: black">Gestion de Instalaciones</a>
-								<ul>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/RegistroDesInstalaciones.xhtml">Registro</a></li>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesIntalaciones.xhtml">Mas
-											opciones</a></li>
-
-								</ul></li>
-						</ul>
-					</div>
 					<ul class="s-12 l-2">
-						<img src="#{request.contextPath}/img/LogoHospital.png" alt="" />
-
+						<img src="#{request.contextPath}/img/LogoHospital.png" alt=""/>
 					</ul>
-					<div class="top-nav s-12 l-5">
-						<ul class="top-ul chevron">
-							<li><a style="color: black">Gestion de Insumos</a>
-								<ul>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/RegistroDeInsumos.xhtml">Registro</a></li>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesInsumos.xhtml">Mas
-											Opciones</a></li>
-
-								</ul></li>
-							<li><a style="color: black" >Gestion de Enfermedades</a>
-								<ul>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/RegistroDeEnfermedades.xhtml">Registro</a></li>
-									<li><a style="color: black" 
-										href="#{request.contextPath}/paginas/seguro/MasOpcionesEnfermedades.xhtml">Mas
-											Opciones</a></li>
-
-								</ul></li>
-							<h:form>
-								<li><h:commandLink style="color: black" 
-										action="#{ControladorLogIn.cerrarSesion}"
-										value="Cerrar Sesion" /></li>
-							</h:form>
-						</ul>
-					</div>
-				</div>
+					<h2 class="texto">Hospital el eden</h2>
+					<br></br>
+					<h2 class="texto2">Nuestra prioridad es su salud</h2>
+					<BUTTON class="logInMedico">LOGIN</BUTTON>
+					<BUTTON class="gestionHorario">GESTIONAR HORARIO</BUTTON>
 			</div>
 		</nav>
 	</header>
