--- a/Hospital/Hospital-web/src/main/webapp/template/indexLogIn.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/indexLogIn.xhtml
@@ -94,16 +94,28 @@
 	</section>
 	<!-- FOOTER -->
 	<footer>
-		<div class="line">
-			<div class="s-12 l-6">
-				<p>Copyright 2015, Vision Design - graphic zoo</p>
+		<div class="contactos">
+			<div class="tel">
+				<LABEL>Contactenos: </LABEL> <LABEL>7565434</LABEL><br /> <LABEL>Citas:
+				</LABEL> <LABEL>7565433</LABEL>
 			</div>
-			<div class="s-12 l-6">
-				<p class="right">
-					<a class="right" href="http://www.myresponsee.com"
-						title="Responsee - lightweight responsive framework">Design
-						and coding by Responsee Team</a>
-				</p>
+			<div>
+				<LABEL>Correo: </LABEL> <LABEL>hospitaleleden@gmail.com</LABEL>
+			</div>
+		</div>
+		<div class="logoFooter">
+			<img src="#{request.contextPath}/img/LogoHospital.png" alt="" />
+		</div>
+		<div class="redes">
+			<LABEL>Siguenos en nuestras redes sociales</LABEL><br/>
+			<div class="facebook">
+				<img src="#{request.contextPath}/img/facebook.png" alt="" />
+			</div>
+			<DIV class="twitter">
+				<img src="#{request.contextPath}/img/twitter.png" alt="" />
+			</DIV>
+			<div class="instagram">
+				<img src="#{request.contextPath}/img/instagram.png" alt="" />
 			</div>
 		</div>
 	</footer>
