--- a/Hospital/Hospital-web/src/main/webapp/css/template-style.css
+++ b/Hospital/Hospital-web/src/main/webapp/css/template-style.css
@@ -93,9 +93,32 @@ nav ul li ul li {
 #fourth-block {
 	background: rgb(0, 30, 34);
 }
+label{
+	color: white;
+}
+.contactos{
+	margin-top: -60px;
+	margin-left: 25px;
+}
+.logoFooter{
+	margin-left: 530px;
+	margin-top: -100px;
+}
+.redes{
+	margin-left:1000px;
+	margin-top: -160px;
+}
+.twitter{
+	margin-top: -65px;
+	margin-left: 100px;
+}
+.instagram{
+	margin-top: -75px;
+	margin-left: 190px;
+}
 footer {
 	background: none repeat scroll 0 0 #001e22;
-	padding: 2em 0;
+	padding: 4.5em 0;
 }
 footer p, footer a:link, footer a:visited, footer a:hover {
 	color: #fff;
