commit Examenes Registro

--- a/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/InicioTemp.xhtml
@@ -94,6 +94,7 @@
 						</p:messages>
 
 						<ui:insert name="cuerpo"></ui:insert>
+						<ui:insert name="cuerpoExamenes"/>
 					</div>
 				</div>
 			</div>
