--- a/Hospital/Hospital-web/src/main/webapp/template/personal.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/personal.xhtml
@@ -47,14 +47,15 @@
 							<li><a style="color: black">Ordenes</a>
 								<ul>
 									<li><a href="" style="color: black">Examenes</a></li>
-									<li><a href="" style="color: black">Hospitalizaciones</a></li>
-									<li><a href="" style="color: black">Cirugias</a></li>
+									<li><a href="#{request.contextPath}/paginas/Medico/RegistroHospitalizacion.xhtml" style="color: black">Hospitalizaciones</a></li>
+									<li><a href="#{request.contextPath}/paginas/Medico/OrdenCirugia.xhtml" style="color: black">Cirugias</a></li>
 
 								</ul></li>
 							<li><a style="color: black">Procedimientos</a>
 								<ul>
 									<li><a href="" style="color: black">Examenes</a></li>
 									<li><a href="" style="color: black">Cirugias</a></li>
+									<li><a style="color: black" href="#{request.contextPath}/paginas/Medico/OrdenPatologia.xhtml">Patologias Paciente</a></li>
 
 								</ul></li>
 						</ul>
@@ -65,7 +66,7 @@
 					</ul>
 					<div class="top-nav s-12 l-5">
 						<ul class="top-ul chevron">
-							<li><a style="color: black">Horarios</a></li>
+							<li><a style="color: black" href="#{request.contextPath}/paginas/Medico/HorarioPersonal.xhtml">Horarios</a></li>
 							<li><a style="color: black">Consultas</a></li>
 						</ul>
 						<h:form>
