--- a/Hospital/Hospital-web/src/main/webapp/template/Paciente.xhtml
+++ b/Hospital/Hospital-web/src/main/webapp/template/Paciente.xhtml
@@ -77,6 +77,7 @@
 							closable="true">
 						</p:messages>
 						<ui:insert name="cuerpo"/>
+						<ui:insert name="cuerpoRegistroPA"></ui:insert>
 					</div>
 				</div>
 			</div>
